@@ -460,7 +460,7 @@ public class DefaultHttpBinding implements HttpBinding {
         int codeToUse = currentCode == null ? defaultCode : currentCode;
 
         if (codeToUse != 500) {
-            if (body == null || body instanceof String && ((String) body).trim().isEmpty()) {
+            if (body == null || body instanceof String && ((String) body).isBlank()) {
                 // no content
                 codeToUse = currentCode == null ? 204 : currentCode;
             }
